package wiki.hf.domain;

public class Change {
}
