package wiki.hf.domain;

public enum ChangeType {

}
