package wiki.hf.domain;

public enum ItemType {
}
