package wiki.hf.domain;

public enum Role {
}
